# mirror_client

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  VCBuild.cmd
core/: mm_const.h  mm_game.h  mm_opengl.cc  mm_opengl.h  mm_utils.cc  mm_utils.h
doc/html/: annotated.html  annotated.js  class_test1-members.html  class_test1.html  class_test2-members.html  class_test2.html  classes.html  classmm_1_1_file_utils-members.html  classmm_1_1_file_utils.html  classmm_1_1_game_utils-members.html  classmm_1_1_game_utils.html  classmm_1_1_i_point-members.html  classmm_1_1_i_point.html  classmm_1_1_i_point.js  classmm_1_1_i_rect-members.html  classmm_1_1_i_rect.html  classmm_1_1_i_rect.js  classmm_1_1_render_system-members.html  classmm_1_1_render_system.html  classmm_1_1_render_system.js  classmm_1_1_u_i_utils-members.html  classmm_1_1_u_i_utils.html  classmm_1_1gl_1_1_fragment_shader-members.html  classmm_1_1gl_1_1_fragment_shader.html  classmm_1_1gl_1_1_fragment_shader.js  classmm_1_1gl_1_1_g_l_program-members.html  classmm_1_1gl_1_1_g_l_program.html  classmm_1_1gl_1_1_g_l_program.js  classmm_1_1gl_1_1_g_l_shader-members.html  classmm_1_1gl_1_1_g_l_shader.html  classmm_1_1gl_1_1_g_l_shader.js  classmm_1_1gl_1_1_open_g_l_bus-members.html  classmm_1_1gl_1_1_open_g_l_bus.html  classmm_1_1gl_1_1_open_g_l_bus.js  classmm_1_1gl_1_1_open_g_l_utils-members.html  classmm_1_1gl_1_1_open_g_l_utils.html  classmm_1_1gl_1_1_rander_obj.html  classmm_1_1gl_1_1_vertex_shader-members.html  classmm_1_1gl_1_1_vertex_shader.html  classmm_1_1gl_1_1_vertex_shader.js  (+422 more)
doc/html/search/: all_10.js  all_12.js  all_6.js  all_9.js  all_b.js  all_d.js  all_e.js  classes_10.js  classes_6.js  classes_d.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  variables_0.js
doc/latex/: annotated.tex  class_test1.eps  class_test1.tex  class_test2.eps  class_test2.tex  classmm_1_1_file_utils.tex  classmm_1_1_game_utils.tex  classmm_1_1_i_point.tex  classmm_1_1_i_rect.tex  classmm_1_1_render_system.tex  classmm_1_1_u_i_utils.tex  classmm_1_1gl_1_1_fragment_shader.eps  classmm_1_1gl_1_1_fragment_shader.tex  classmm_1_1gl_1_1_g_l_program.eps  classmm_1_1gl_1_1_g_l_program.tex  classmm_1_1gl_1_1_g_l_shader.eps  classmm_1_1gl_1_1_g_l_shader.tex  classmm_1_1gl_1_1_open_g_l_bus.tex  classmm_1_1gl_1_1_open_g_l_utils.tex  classmm_1_1gl_1_1_rander_obj.tex  classmm_1_1gl_1_1_vertex_shader.eps  classmm_1_1gl_1_1_vertex_shader.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_010_01_4.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_011_01_4.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_012_01_4.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_013_01_4.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_014_01_4.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_015_01_4.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_016_01_4.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_017_01_4.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_018_01_4.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_019_01_4.tex  classstd_1_1tr1_1_1tuple.tex  classstd_1_1tr1_1_1tuple_3_4.tex  classtesting_1_1_assertion_result.tex  classtesting_1_1_empty_test_event_listener.eps  classtesting_1_1_empty_test_event_listener.tex  classtesting_1_1_environment.tex  classtesting_1_1_message.tex  (+147 more)
res/: default.frag  default.vert  test.fla  test.frag  test.frag.txt  test.swf  test.vert  test1.frag
src/: main.cpp
src/core/: mm_const.h  mm_core.cc  mm_core.h  mm_game.h  mm_opengl.h  mm_utils.h
src/test/: main.cpp  opengl_test.cpp  opengl_test.h
test/: main.cpp  opengl_test.cpp  opengl_test.h  test1.cpp  test1.h
